fixed overflow-x on mobile

--- a/index.css
+++ b/index.css
@@ -328,7 +328,7 @@ body {
     .proj-header hr {
         background-color: #fff !important;
         height: 5px;
-        width: 28rem;
+        width: 25rem;
         margin-top: 0px;
         margin-bottom: 10px;
     }
